txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -5031,7 +5031,10 @@ so we only generate normal i.i.d random variables.
 	\end{enumerate}
 \end{fancyproof}
 What the fuck?\par
-Say we have to generate a $n$-dim random vecotre and use it to approximate a \bwm.
+Say we have to generate a $n$-dim random vecotre and use it to approximate a \bwm. We have
+\begin{equation*}
+	\left(B_{\frac{T}{n}},B_{\frac{2T}{n}},\ldots,B_{\frac{T}}\right)\sim\left(\sqrt{\frac{T}{n}}X_1,\sqrt{\frac{T}{n}}X_1+\sqrt{\frac{T}{n}}X_2,\ldots,\sqrt{\frac{T}{n}}X_1+\ldots+\sqrt{\frac{T}{n}}X_n\right)
+\end{equation*}
 \listoffigures  
 \end{document} 
 
