--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -9,7 +9,7 @@
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
 %\usepackage{lmodern}
 
-
+\usepackage{minted}
 % Language setting
 % Replace `english' with e.g. `spanish' to change the document language
 \usepackage[english]{babel}
